--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 Présentation du projet
+
+Ce programme permet d’aider au quotidien les techniciens réseaux.Il permet pour pouvoir voir les stocks et de maintenir a jour avec des fonctionnalités simple
